fixed nav spacing issue

--- a/css/index.css
+++ b/css/index.css
@@ -181,7 +181,7 @@ table {
   margin-top: 3rem;
 }
 nav {
-  width: 66.825%;
+  width: 86.4rem;
   background-color: rgba(153, 160, 170);
   display: flex;
   flex-direction: row;
