--- a/less/nav.less
+++ b/less/nav.less
@@ -1,5 +1,5 @@
 nav{
-    width:66.825%;;
+    width:86.4rem;
     background-color:rgba(153,160,170);
     display:flex;
     flex-direction:row;
